# libmdbx-entire

./: .gitignore  0003-atomics-types_h.patch  AGENTS.md  CMakeLists.txt  ChangeLog.md  GNUmakefile  README.md  TODO.md  conanfile.py  mdbx.h  mdbx.h++  valgrind.supp  valgrind_suppress.supp
.github/workflows/: ci-android.yml  ci-cxx-msvc.yml  ci-linux.yml  ci-macos.yml  ci-windows-mingw.yml  ci-windows-msvc.yml
ci/: ci.sh
cmake/: compiler.cmake  utils.cmake
docs/: Doxyfile.in  _restrictions.md  _starting.md  _toc.md
ecb_build/: all.bat  mk_rd_dev.bat  mk_rd_dev64.bat  mk_rd_dev_log.bat  mk_rd_dev_log64.bat
example/: example-mdbx.c  sample-bdb.txt
examples/: CMakeLists.txt
exploits/: poc-node_ds-oob.c
mdbx++/: begin.h++  decl_buffer.h++  decl_core.h++  decl_cursor.h++  decl_env.h++  decl_exceptions.h++  decl_slice.h++  decl_txn.h++  end.h++  impl_cursor.h++  impl_env.h++  impl_exceptions.h++  impl_slice.h++  impl_txn.h++
src/: alloy.c  api-cold.c  api-copy.c  api-cursor.c  api-dbi.c  api-env.c  api-extra.c  api-gc.c  api-get-cached.c  api-key-transform.c  api-misc.c  api-opts.c  api-range-estimate.c  api-txn-data.c  api-txn.c  atomics-ops.h  atomics-types.h  audit.c  bits.md  chk.c  cogs.c  cogs.h  coherency.c  config.h.in  cursor.c  cursor.h  dbi.c  dbi.h  defrag.c  dml.c  dml.h  dpl.c  dpl.h  dxb.c  env.c  essentials.h  gc-get.c  gc-put.c  gc.h  global.c  (+57 more)
src/man1/: mdbx_drop.1  mdbx_dump.1  mdbx_load.1  mdbx_stat.1
src/tools/: chk.c  copy.c  defrag.c  drop.c  dump.c  load.c  stat.c  wingetopt.c
test/: CMakeLists.txt  append.c++  base.h++  cases.c++  chrono.c++  chrono.h++  config.c++  config.h++  copy.c++  dead.c++  fork.c++  hill.c++  jitter.c++  keygen.c++  keygen.h++  log.c++  log.h++  main.c++  nested.c++  osal-unix.c++  osal-windows.c++  osal.h++  stochastic.sh  test.c++  test.h++  try.c++  ttl.c++  utils.c++  utils.h++
test/extra/: bunches_removal.c++  crunched_delete.c++  dbi_nested_txn.c  details_rkl.c  distance_scroll_distribute.c++  doubtless_positioning.c++  dupfix_multiple.c++  get_cached.c++  hex_base64_base58.c++  maindb_ordinal.c++  nested_drop_abort.c  open.c++  rename_dbi.c  reverse_insertions.c++  txn.c++
test/extra/pcrf/: pcrf_test.c
tests/: CMakeLists.txt  battery-tmux.sh  stochastic.sh
tests/exploits/: pos-badgeo-oos.c
tests/framework/: CMakeLists.txt  append.c++  base.h++  cases.c++  chrono.c++  chrono.h++  config.c++  config.h++  copy.c++  dead.c++  fork.c++  hill.c++  keygen.c++  keygen.h++  log.c++  log.h++  nested.c++  osal-unix.c++  osal-windows.c++  osal.h++  test.c++  try.c++  ttl.c++  utils.c++
tests/framework/stub/: pthread_barrier.h
tests/ut/: buffers.c++  crunched_delete.c++  cursor_closing.c++  dbi.c++  dbi_nested_txn.c  details_rkl.c  doubtless_positioning.c++  early_close_dbi.c++  get_cached.c++  hex_base64_base58.c++  maindb_ordinal.c++  open.c++  rename_dbi.c  reverse_insertions.c++  txn.c++
ut_and_examples/: CMakeLists.txt  example-mdbx.c++
